Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/Intersection02.out
Intersection02.java:16:62: compiler.warn.prob.found.req: (compiler.misc.unchecked.cast.to.type), java.util.List<java.lang.String>, java.lang.Object&java.util.List<java.lang.String>&java.io.Serializable&Intersection02.P<java.lang.String>
- compiler.err.warnings.and.werror
1 error
1 warning
